# ava-pred

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
extract/: extract_data.py  extract_weather.py  main.py  multi_extract_data.py  pyproject.toml
load/: balanced_cleaned.csv  full_cleaned.csv
sql/: BuildDB.sql  find_nearest_station.sql  makeDatabase.sql  makeGeogCols.sql
transform/: transformFinalData.py  transformWeather.py  transform_ava_coords.py
